@@ -7,6 +7,7 @@ DIST grsecurity-sources-extras-4.9.49.tar.xz 2549128 SHA256 638243a89873b9152780
 DIST grsecurity-sources-extras-4.9.50.tar.xz 2554316 SHA256 6ea9deae6705f6ba6349a28be3c2477f9f1d490bdfa4f6952f05793a55d172fa SHA512 8e92c7a444abcd4dd14659e3f2dbf864d2dd9a02aa90fd2ccc0bcdfafa9c38a1a66e200c23e7639ec55b295854c683f075655833c83068e03f0f5e88aa70d56e WHIRLPOOL d5d1a99353c09fc1d9497863a568e85defc165cf03f0b4e5829ca190ab84dfeb1b54ea9bb1b722c0f6daa79980b14b4a4c81a623a62d860920df93935ad7986b
 DIST grsecurity-sources-extras-4.9.51.tar.xz 2581044 SHA256 921c41a8577585b21baa3ec5417762c8a211adfc9fe6fa3ac44ce61a0cf55c21 SHA512 a449ca01079f64588ffb7ab2a0880839e8b2165bb8360c4e07ed5985ba2dd5eac5db5a7f6c8bae0e88771a4fc248f11289a4376f32c6420198d9209838d3d13c WHIRLPOOL befab3d1aa291d7244845114d893093f41a15d69586f96af25ffd0812ea9d4109e49c0b3ae8f2f036a452e008a79fa9f6874cbe7192223b9895ff4f840a71295
 DIST grsecurity-sources-extras-4.9.52.tar.xz 2602456 SHA256 5b8074d5bfc88f5aee8614357226d563860a575ba4b8c918d74b95a2f0ceafff SHA512 e77fe1dbeb7eb3d3f8e94a17500b1270ec8db465b8425437459eca37a8e5d154832675580102934d0d8a1a6b5dba643c5c03e9a3c3bd2673a8bc25a88d8e64ad WHIRLPOOL b3be8b0200a7ad68200b101d2613644ad088710e30b3c7403f910050b9a603abcab877d2b38db4bc349eea93b6a1ac84eeef9bfdcdd6835b4ce12bc6d785168b
+DIST grsecurity-sources-extras-4.9.53.tar.xz 2618408 SHA256 e75f863db4c2d592f64f6352b2294105116e29fa4707c50d3ee595eae88b8a66 SHA512 3ef5cf91cf7cb7a30680e5db935479b0f78a93e42dfb0041a9840561735d3b464bb1b2e6428c5994e17553833126b396a4f74c7d0147fca95488ee7d40483281 WHIRLPOOL 4067cf935789dbc392de9668b418c08b7602f3e518c46b1423114be9ead189b86f2e505aad485a48b0300af64b80ed615446a825b60ef0db4c3a11605caac0d1
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -14,21 +15,22 @@ EBUILD grsecurity-sources-4.9.49.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.50.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.51.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.52.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 1336 SHA256 99a32bb62610883348c20b716050ed803f97865430d9ef983b0431d29a327ec6 SHA512 78be8f2c27f3c0dac40b536ed8e01df86f4d1bc0c41a6c0313618fb41aa0d420c401ee65d8855116b5182c9a5e1eabbc322553c8b7fd8a33f0053d53da3b8f5e WHIRLPOOL 6f52084d0723a545388b3447b7529aefab1a893d8c0fe66ea0070d7840ae0486a9fb1fa84ccdfa242460882f80e856b82b6b4d0c28fc579dc4acf61b0ca8342b
+EBUILD grsecurity-sources-4.9.53.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 1531 SHA256 e8e9c1b922578695e6a96a2425c6879e085d57e02f75a2a82766768450f6ebbc SHA512 5999448166046bb4305d4fe5fadb610092ca6fa554cab61333fc9a5b2fc12bb37fdad36716fb79bfd23af38baef2526623898ffba79b21ea6da650fa677e7c52 WHIRLPOOL fcdc6515c8475ca165ddb26a57f902b9bac5ecb92067350b821abb0b181f67957adf4dd06fcfc4e13c10aa835e2d01fcbb60c8c8b9016349b0659579125d4287
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnPa30ACgkQunvTUHGU
-RZ/lLg/7BTZBQV0tK44Eeera63ReMS3J5n7CiTPAmv0SkFN7gBZ380vd6nMhFwyu
-YKnfatmvhntnfOGCx9sNFfpoKndQPcsU3oE42OQJLq2z3hGSxqse4Cf82ovWCVmY
-36N0304SblXRq2C64zwR9HqxAURu2nVxiPi8fq+2LntdmPPjken/e9OZms5Bk3Az
-TGhqxlwaDfzXQuzxdT0psbE2afY8vqcDh/lDnEpkqrpJpmREe1Z+BJk4SknChVBU
-/oqmV+EoqnB+hKjZ5p5HcfpAKBJG0YGtUXIEl6hvbT0DABYy61FGE7clrUz6lW+N
-m550XVvLIDc7i/dH8DmcrLJ2IQtS/auny6qu/HJfdaX6UHB7lN/R5WQ1IfxUTigE
-4Bk/h+b2UfRoLiPsCKOZvb8ugUk26yCdj2LN1hlZ/XiFFYb3a7AOe8QSeC7gB/VL
-S+no6BdfMd5jwx5+10JjkXvKEVYbJSGOeNG+5V5dagR5qwpvgQCxGFcNRJsLMlEw
-R2PtpjKQoY+VBotYN+t4/NuNvfNTsYv81M4Qq4/iUiHnhBF98eHMWOaTFl1C9xO6
-y8Vuov+pyg+odYp5a9rQVnR5q0WY6ZSWrK1h9C0kDOIdLokGwTwH/48GBzFx0fEI
-AvoLwxyuuO4Ulhj9IL/BMyUWx3cIWeQIsB0R6bCZzCCj7pka4/g=
-=Bh9A
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnYjEUACgkQunvTUHGU
+RZ/qXBAAtbgAEARZNQmbBHn72HoOIO8EGpw3dAESgb/1xiN2j59oClj2Ash8fUwk
+6kJHp/sO7QlOF7M8Wef2u6rK/qp6tX1FSSiW1ts2Ul7sunsldlmguUVIuMgyi/zX
++AEFUEC01lGN4p/VpSblH73OQL6PiuDVb4EIGABjr0xG6UlFZ1RSga2YSukIJOsK
+1WZEqVENlnSmev1VUGC640iyn9eOz23uxUXh3QGJ/BlSwLlh4UUSz+FpP2PB6m7a
+MNFdMoEoN2LwiUQxO9J7YDCPJam6mU60SChnAEma+I2n1H3x4Gyz3lgcbiruX38e
+JxcwZOcv23bkdFEG+90ccQyDSEjdYnJipQo9O6Hoqcantw11thj8TLLdJZEsitu1
+sXinBFZKKUre4yL8O+hf7CqYH118+Y4OINK2qkhzTNPB4i0awSCNR0zzgu9cY5fh
+UPZoPWS6yI55X+/Ez1BNJQq+aDeSDEQ21jKtxCu4MsONXCovGrA3f8O2j9J+D7w9
+Drs5Rg5ldbwC0oQSkF3DcrPoDo48qXRhqTEcCha10Q3WQRgHhBldQ4lkorqcP6JT
++Xn3Ybd+gWkcFTsOUWAy7qwPkran0jlq9kj0FK20eLfmXJJ4QvLhWJAVjvILhO07
+puyee4aWv4UfFHrFYPpxC8F6WXY81h3k/rd+3Ht9TjeaAHYnjFs=
+=aw25
 -----END PGP SIGNATURE-----
